# wxUnivDiff

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  TODO.txt  index.html  params.json  release_it.bat  release_it.sh
src/: CMakeLists.txt  MainFrame.cpp  MainFrame.h  MimeTypeListFrame.cpp  MimeTypeListFrame.hpp  TableModel.cpp  TableModel.hpp  cmdline.cpp  cmdline.hpp  extensionconfiguration.cpp  extensionconfiguration.hpp  ui.cpp  ui.h  wxUnivDiffApp.cpp  wxUnivDiffApp.hpp
src/ui-design/: app.fbp
test/: CMakeLists.txt  test_cmdline.hpp  test_serialisation.hpp
